--- a/.travis.yml
+++ b/.travis.yml
@@ -50,15 +50,15 @@ before_install:
     else
       export SCRIPT_DIR=${REPO_DIR}
     fi
-install: if test -f ${SCRIPT_DIR}/install.sh; then bash ${SCRIPT_DIR}/install.sh; fi
-before_script: if test -f ${SCRIPT_DIR}/before_script.sh; then bash ${SCRIPT_DIR}/before_script.sh; fi
-script: if test -f ${SCRIPT_DIR}/script.sh; then bash ${SCRIPT_DIR}/script.sh; fi
-after_success: if test -f ${SCRIPT_DIR}/after_success.sh; then bash ${SCRIPT_DIR}/after_success.sh; fi
-after_failure: if test -f ${SCRIPT_DIR}/after_failure.sh; then bash ${SCRIPT_DIR}/after_failure.sh; fi
+install: if test -f ${SCRIPT_DIR}/install.sh; then source ${SCRIPT_DIR}/install.sh; fi
+before_script: if test -f ${SCRIPT_DIR}/before_script.sh; then source ${SCRIPT_DIR}/before_script.sh; fi
+script: if test -f ${SCRIPT_DIR}/script.sh; then source ${SCRIPT_DIR}/script.sh; fi
+after_success: if test -f ${SCRIPT_DIR}/after_success.sh; then source ${SCRIPT_DIR}/after_success.sh; fi
+after_failure: if test -f ${SCRIPT_DIR}/after_failure.sh; then source ${SCRIPT_DIR}/after_failure.sh; fi
 deploy:
   - provider: script
-    script: if test -f ${SCRIPT_DIR}/deploy.sh; then bash ${SCRIPT_DIR}/deploy.sh; fi
-after_script: if test -f ${SCRIPT_DIR}/after_script.sh; then bash ${SCRIPT_DIR}/after_script.sh; fi
+    script: if test -f ${SCRIPT_DIR}/deploy.sh; then source ${SCRIPT_DIR}/deploy.sh; fi
+after_script: if test -f ${SCRIPT_DIR}/after_script.sh; then source ${SCRIPT_DIR}/after_script.sh; fi
 before_cache:
 - |-
     case $TRAVIS_OS_NAME in
